Add Lance SinkV2 append and upsert support